--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ReduxCRUDGalleryApp",
+  "name": "redux-crud-gallery-app",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://PendyalaDinesh.github.io/ReduxCRUDGalleryApp",
